Ajustes a Moca1 y optimizacion