@@ -2,15 +2,11 @@ package com.chameleonsoftware.Database;
 
 import android.content.ContentValues;
 import android.content.Context;
-import android.database.Cursor;
 import android.database.sqlite.SQLiteDatabase;
 import android.database.sqlite.SQLiteOpenHelper;
 import android.util.Log;
 
 import com.chameleonsoftware.neurotester.MocaUser;
-
-import java.util.ArrayList;
-import java.util.List;
 
 /**
  * Created by camaleon2 on 17/10/15.
@@ -18,13 +14,13 @@ import java.util.List;
 public class DBManager extends SQLiteOpenHelper {
 
     /******* if debug is set true then it will show all Logcat message ***/
-    public static final boolean DEBUG = true;
+    private boolean DEBUG = true;
 
     /********** Logcat TAG ************/
     public static final String LOG_TAG = "DBManager";
 
     /************* Database Name ************/
-    public static final String DATABASE_NAME = "DB_asist.db";
+    public static final String DATABASE_NAME = "DB_TESTER.db";
 
     /**** Database Version (Increase one if want to also upgrade your database) ****/
     public static final int DATABASE_VERSION = 1;// started at 1
@@ -33,9 +29,9 @@ public class DBManager extends SQLiteOpenHelper {
 
     /** Table names */
     public static final String USER_TABLE = "user";
+    public static final String MEDIA_TABLE = "media";
 
-
-    /************ Table Fields ************/
+    /************ USER Table Fields ************/
     private static final String KEY_ID = "id";
     private static final String KEY_DATE = "date";
     private static final String KEY_NAME = "name";
@@ -44,19 +40,36 @@ public class DBManager extends SQLiteOpenHelper {
     private static final String KEY_GENDER = "gender";
     private static final String KEY_PHONE = "phone";
     private static final String KEY_STUDY = "study";
+    private static final String KEY_REVISED = "revised";
 
+
+    /************ MEDIA Table Fields ************/
+    private static final String KEY_MOCA1_IMAGE = "moca1image";
+    private static final String KEY_MOCA2_IMAGE = "moca2image";
+    private static final String KEY_MOCA3_IMAGE = "moca3image";
+    private static final String KEY_MOCA1_TIME = "moca1time";
+    private static final String KEY_MOCA2_TIME = "moca2time";
+    private static final String KEY_MOCA3_TIME = "moca3time";
 
     /**** Set all table with comma seperated like USER_TABLE,ABC_TABLE ******/
-    private static final String[ ] ALL_TABLES = { USER_TABLE };
+    private static final String[ ] ALL_TABLES = { USER_TABLE , MEDIA_TABLE};
 
     /** Create table syntax */
-    private static final String TABLE_CREATE = "create table "
+    private static final String USER_TABLE_CREATE = "create table "
             + USER_TABLE + "(" + KEY_ID
             + " integer primary key, "+ KEY_DATE
             + " text not null, " + KEY_NAME
             + " text not null, "+ KEY_LASTNAME
             + " text not null, " + KEY_EMAIL
-            + " text not null);";
+            + " text not null, " + KEY_REVISED
+            + " integer not null);";
+
+    private static final String MEDIA_TABLE_CREATE = "create table "
+            + MEDIA_TABLE + "(" + KEY_ID
+            + " integer primary key, "+ KEY_MOCA1_IMAGE
+            + " blob not null, " + KEY_MOCA2_IMAGE
+            + " blob not null, "+ KEY_MOCA3_IMAGE
+            + " blob not null);";
 
     public DBManager(Context context)
     {
@@ -69,7 +82,7 @@ public class DBManager extends SQLiteOpenHelper {
         if (DEBUG) Log.i(LOG_TAG, "new create");
 
         try {
-            db.execSQL(TABLE_CREATE);
+            db.execSQL(USER_TABLE_CREATE);
         } catch (Exception exception) {
             if (DEBUG)
                 Log.i(LOG_TAG, "Exception onCreate() exception");
@@ -79,7 +92,6 @@ public class DBManager extends SQLiteOpenHelper {
 
     @Override
     public void onUpgrade(SQLiteDatabase db, int oldVersion, int newVersion) {
-        // TODO Auto-generated method stub
 
         if (DEBUG)
             Log.w(LOG_TAG, "Upgrading database from version " + oldVersion
@@ -92,22 +104,21 @@ public class DBManager extends SQLiteOpenHelper {
         onCreate(db);
     }
 
-    public void insertContact  (MocaUser uData)
+    public void insertUserData  (MocaUser uData)
     {
-        if (DEBUG)
-            Log.i(LOG_TAG, "new insertContact");
+        if (DEBUG) Log.i(LOG_TAG, "new insertContact");
 
         SQLiteDatabase db = this.getWritableDatabase();
         ContentValues cVal = new ContentValues();
 
-        int id = new Integer(uData.getId());
-        String date = uData.getDate();
-        String name = uData.getName();
-        String lastname = uData.getLastname();
-        String email = uData.getEmail();
-        String gender = uData.getGender();
-        String phone = uData.getPhone();
-        String study = uData.getStudy();
+        int id = Integer.valueOf(uData.getId());
+        String date =       uData.getDate();
+        String name =       uData.getName();
+        String lastname =   uData.getLastname();
+        String email =      uData.getEmail();
+        String gender =     uData.getGender();
+        String phone =      uData.getPhone();
+        String study =      uData.getStudy();
 
         cVal.put(KEY_ID,id);
         cVal.put(KEY_DATE, date);
@@ -117,12 +128,36 @@ public class DBManager extends SQLiteOpenHelper {
         cVal.put(KEY_GENDER, gender);
         cVal.put(KEY_PHONE, phone);
         cVal.put(KEY_STUDY, study);
+        cVal.put(KEY_REVISED, 0); //No Revisado
 
         db.insert(USER_TABLE, null, cVal);
     }
 
     public void insertMedia(MocaUser uData){
 
+        if (DEBUG) Log.i(LOG_TAG, "new insertContact");
+
+        SQLiteDatabase db = this.getWritableDatabase();
+        ContentValues cVal = new ContentValues();
+
+        int id = Integer.valueOf(uData.getId());
+        byte[] moca1Bitmap = uData.getBitmapByteArray(uData.getMoca1Bitmap());
+        byte[] moca2Bitmap = uData.getBitmapByteArray(uData.getMoca2Bitmap());
+        byte[] moca3Bitmap = uData.getBitmapByteArray(uData.getMoca3Bitmap());
+
+        int moca1Time = uData.getMoca1Time();
+        int moca2Time = uData.getMoca2Time();
+        int moca3Time = uData.getMoca3Time();
+
+        cVal.put(KEY_ID,id );
+        cVal.put(KEY_MOCA1_TIME,moca1Time);
+        cVal.put(KEY_MOCA2_TIME,moca2Time);
+        cVal.put(KEY_MOCA3_TIME,moca3Time);
+        cVal.put(KEY_MOCA1_IMAGE,moca1Bitmap);
+        cVal.put(KEY_MOCA2_IMAGE,moca2Bitmap);
+        cVal.put(KEY_MOCA3_IMAGE,moca3Bitmap);
+
+        db.insert(MEDIA_TABLE,null,cVal);
     }
 
     /*
@@ -165,4 +200,11 @@ public class DBManager extends SQLiteOpenHelper {
     /******************* NUNCA OLVIDAR CERRAR LA DB ****************************/
     public  void closeDB(){this.getWritableDatabase().close();}
 
+    //Variable MANAGEMENT
+    public void setDEBUG(boolean DEBUG) {
+        this.DEBUG = DEBUG;
+    }
+    public boolean getDEBUG(){
+        return this.DEBUG;
+    }
 }
